--- a/app/Resources/views/cours/oneAdmin.html.twig
+++ b/app/Resources/views/cours/oneAdmin.html.twig
@@ -1005,6 +1005,7 @@
                     url: steps + upload_srcSteps  + upload_course + folderLocation,
                     dropZone:null,
                     dataType: 'json',
+                    maxFileSize: 256000000,
                     add: function(e, data) {
                         var uploadErrors = [];
                         if(data.files[0]['size'] > 256000000) {
@@ -1121,6 +1122,7 @@
                     url: steps + upload_srcSteps  + upload_course + folderLocation,
                     dropZone:null,
                     dataType: 'json',
+                    maxFileSize: 256000000,
                     add: function(e, data) {
                         var uploadErrors = [];
                         if(data.files[0]['size'] > 256000000) {
