--- a/app/Resources/views/cours/one.html.twig
+++ b/app/Resources/views/cours/one.html.twig
@@ -255,7 +255,7 @@
         <div class="row">
             <div class="col-sm-4">
                 <div class="course-intro">
-                    <img src="{{ asset('images/') }}{{ cours.imgFilePath }}" class="img-responsive" alt="">
+                    <img src="{{ asset('images/cours/') }}{{ cours.imageFilename }}" class="img-responsive" alt="">
                 </div>
             </div>
             <div class="col-sm-8">
