--- a/app/Resources/views/cours/oneAdmin.html.twig
+++ b/app/Resources/views/cours/oneAdmin.html.twig
@@ -1278,7 +1278,7 @@
         <div class="row">
             <div class="col-sm-3">
                 <div class="course-intro">
-                    <img src="{{ asset('images/') }}{{ cours.imgFilePath }}" class="img-responsive" alt="">
+                    <img src="{{ asset('images/cours/') }}{{ cours.imageFilename }}" class="img-responsive" alt="">
                 </div>
             </div>
             <div class="col-sm-9">
