--- a/app/Resources/views/cours/adminLien.html.twig
+++ b/app/Resources/views/cours/adminLien.html.twig
@@ -30,7 +30,7 @@
         <div class="row">
             <div class="LabelAdmin col-sm-3">Description</div>
             <div class="col-sm-9  col-xs-12 noPadding">
-                <textarea data-champName="description" id="zone_{{ zoneId }}_lien_{{ lien.id }}_descr" class="simpleEditor editor champAdmin" readonly>{{ lien.description }}</textarea>
+                <textarea data-champName="description" id="zone_{{ zoneId }}_lien_{{ lien.id }}_descr" class="complexEditor editor champAdmin" readonly>{{ lien.description }}</textarea>
             </div>
         </div>
         <hr class="hrCourseElem" />
