--- a/app/Resources/views/discipline/myCourses.html.twig
+++ b/app/Resources/views/discipline/myCourses.html.twig
@@ -52,6 +52,7 @@
                     success: function (response) {
                         btn.remove();
                         block.find('.fdbackInscUserSess').removeClass('hidden');
+                        window.location.href = window.location.href;
                     }
                 });
             });
