--- a/app/Resources/views/emailing.html.twig
+++ b/app/Resources/views/emailing.html.twig
@@ -22,6 +22,10 @@
                 var checkbox = $(this).closest('.usrEmailingRow').find('.checkUserEmailing').trigger('click');
             });
 
+            $('.btnCancelFiltersEmailing').click(function(){
+                $('.selectpicker').selectpicker('deselectAll');
+                $('.checkFiltreEmailing').prop('checked', false);
+            });
             $('.btnApplyFiltersEmailing').click(function(){
                 $('.checkUserEmailing').prop('checked', false);
                 var coursSubscribed = [];
@@ -164,19 +168,6 @@
                         </select>
                     </div>
                 </div>
-                <div class="filtreEmailingRow row usersSubscribedSession">
-                    <div class="col-sm-6">
-                        <input class="checkFiltreEmailing" type="checkbox" />
-                        <div class="filtreEmailing">Tous les utilisateurs inscrits à une session</div>
-                    </div>
-                    <div class="col-sm-6">
-                        <select class="selectpicker col-xs-6" data-style="MyBtnSelectPickeer" title="Choisir une session" multiple>
-                            {% for key,val in sessions %}
-                                <option class="addNewItem addFiltredSession" data-content="<span data-idSess='{{ val.id }}'>{{ val.nom }}</span>"></option>
-                            {% endfor %}
-                        </select>
-                    </div>
-                </div>
                 <div class="filtreEmailingRow row usersNotSubscribedSession">
                     <div class="col-sm-6">
                         <input class="checkFiltreEmailing" type="checkbox" />
@@ -220,6 +211,7 @@
                     <div class="col-sm-10">
                         <div class="form-group text-center">
                             <a class="btn btn-primary btn-sm btnApplyFiltersEmailing">Appliquer les filtres</a>
+                            <a class="btn btn-primary btn-sm btnCancelFiltersEmailing">Annuler les filtres</a>
                         </div>
                     </div>
                     <div class="col-sm-2">
