--- a/app/Resources/views/emailing.html.twig
+++ b/app/Resources/views/emailing.html.twig
@@ -25,6 +25,7 @@
             $('.btnCancelFiltersEmailing').click(function(){
                 $('.selectpicker').selectpicker('deselectAll');
                 $('.checkFiltreEmailing').prop('checked', false);
+                $('.checkUserEmailing').prop('checked', false);
             });
             $('.btnApplyFiltersEmailing').click(function(){
                 $('.checkUserEmailing').prop('checked', false);
