--- a/app/Resources/views/discipline/myCourses.html.twig
+++ b/app/Resources/views/discipline/myCourses.html.twig
@@ -152,10 +152,26 @@
                                                         <p class="brief fdbackInscUserSess{% if not val.sessionsAlerteIsInscrit[keyC] %} hidden{% endif %}">Vous êtes inscrit à cette future session.</p>
 
                                                         {% if not val.sessionsAlerteIsInscrit[keyC] %}
-                                                            {% if val.sessionsAlertePermetInscr[keyC] %}
-                                                                <a class="btn btn-warning btn-sm btnInscrSess">S'inscrire</a>
-                                                            {% endif %}
+                                                            <a class="btn btn-warning btn-sm btnInscrSess">S'inscrire</a>
                                                         {% endif %}
+                                                    </div>
+                                                </div>
+                                            {% endfor %}
+                                        {% endif %}
+                                        {% if val.sessionsFinSession is defined %}
+                                            {% for keyC,valC in val.sessionsFinSession %}
+                                                <div class="course-list course-sessionAlerte"  data-idCours="{{ valC.id }}" data-idSession="{{ valC.session.id }}" style="margin-top: 0;">
+                                                    <div class="course-media">
+                                                        <img src="{{ asset('images/cours/') }}{{ valC.imageFilename }}" class="img-responsive course-img" alt="">
+                                                    </div>
+                                                    <div class="course-detail">
+                                                        <h4 class="heading">{{ valC.nom }}</h4>
+                                                        <ul class="course-features">
+                                                            <li><i class="fa fa-map-marker"></i> À distance</li>
+                                                            <br/>
+                                                            <li><i class="fa fa-hourglass-start"></i> {{ valC.session.dateDebut|localizeddate('none', 'none', null, null, 'd LLLL Y' ) }}</li>
+                                                        </ul>
+                                                        <p class="brief">{{ valC.session.messageFinSession|raw }}</p>
                                                     </div>
                                                 </div>
                                             {% endfor %}
