--- a/app/Resources/views/cours/one.html.twig
+++ b/app/Resources/views/cours/one.html.twig
@@ -472,16 +472,33 @@
                                                         </div>
                                                         <div class="col-xs-12 text-right">
                                                         {% for keyG,valG in val.zones.content[keyR] %}
-                                                            <a class="btnLienGroupeRessource btn btn-xs"
-                                                               style="background-color: {{ valG.categorieLien.couleur }};" target="_blank"
-                                                               href="{{ valG.lien.url }}">
-                                                                {% if valG.lien.typeLien.faIcon is defined %}
-                                                                    <i class="fa {{ valG.lien.typeLien.faIcon }}"></i>
-                                                                {% else %}
-                                                                    <i class="fa fa-external-link"></i>
-                                                                {% endif %}
-                                                                {{ valG.nom }}
-                                                            </a>
+                                                            {% if '.mp4' in valG.lien.url %}
+                                                                <div class="blocMedia">
+                                                                    <video controls>
+                                                                        <source src="{{ valG.lien.url }}" type="video/mp4">
+                                                                        Votre navigateur ne supporte pas la balise "video".
+                                                                    </video>
+                                                                </div>
+                                                            {% elseif '.mp3' in valG.lien.url %}
+                                                                <div class="blocMedia">
+                                                                    <audio controls>
+                                                                        <source src="{{ valG.lien.url }}" type="audio/mpeg">
+                                                                        Votre navigateur ne supporte pas la balise "audio".
+                                                                    </audio>
+                                                                </div>
+                                                            {% else %}
+                                                                <a class="btnLienGroupeRessource btn btn-xs"
+                                                                   style="background-color: {{ valG.categorieLien.couleur }};" target="_blank"
+                                                                   href="{{ valG.lien.url }}">
+                                                                    {% if valG.lien.typeLien.faIcon is defined %}
+                                                                        <i class="fa {{ valG.lien.typeLien.faIcon }}"></i>
+                                                                    {% else %}
+                                                                        <i class="fa fa-external-link"></i>
+                                                                    {% endif %}
+                                                                    {{ valG.nom }}
+                                                                </a>
+                                                            {% endif %}
+
                                                         {%  endfor %}
                                                         </div>
                                                     </div>
