--- a/app/Resources/views/calendrier.html.twig
+++ b/app/Resources/views/calendrier.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block pageHeader %}
+    <div>{{ template }}</div>
     <div class="page-header">
         <div class="container">
             <h2 class="color3">Calendrier</h2>
