--- a/app/Resources/views/documents/byDisc.html.twig
+++ b/app/Resources/views/documents/byDisc.html.twig
@@ -69,7 +69,7 @@
                     done: function (e, data) {
                         $.each(data.result.files, function (index, file) {
 
-                            var myUrlTab = file.url.split(folderLocation);
+                            var myUrlTab = file.url.split('upload/');
 
                             var usersSelected = $('.selectpicker').val();
                             usersSelected.push($('[data-userId]').attr('data-userId'));
@@ -92,7 +92,7 @@
                                 },
                                 success: function (data) {
                                     $('.modal').modal('toggle');
-                                    //window.location.href = window.location.href;
+                                    window.location.href = window.location.href;
                                 },
                                 error: function(xhr, status, error) {
                                     $('.modal').modal('toggle');
