--- a/app/Resources/views/user/add.html.twig
+++ b/app/Resources/views/user/add.html.twig
@@ -124,13 +124,12 @@
             </p>
 
             <p>
-                Si vous préparez les concours d’enseignement de la session 2018 nous vous proposerons un travail de deux
-                semaines en juillet (17-30) ou en août (16-29). La première démarche à faire est de s’inscrire sur la
+                La première démarche à faire est de s’inscrire sur la
                 plate-forme.
             </p>
             <h4 class="heading">Comment <span class="color2">s'inscrire ?</span></h4>
 
-            <p>Créez votre compte MAINTENANT. Dès l’ouverture de la plate-forme vous serez personnellement averti.</p>
+            <p>Créez votre compte à l’aide du formulaire ci-dessous.</p>
 
             <p>En cas de problème ou de question : <a class="studitBlueFC" href="mailTo:contact.afadec@gmail
                 .com">contact.afadec@gmail.com</a></p>
