--- a/app/Resources/views/documents/byDisc.html.twig
+++ b/app/Resources/views/documents/byDisc.html.twig
@@ -25,7 +25,7 @@
                 $('[data-champname="nom"]').removeClass('champError').val('');
                 $('.contentDocInfos').show();
                 $('.contentDocRess').hide();
-                $('.selectpicker').selectpicker('val', 'tous');
+                $('.selectpicker').selectpicker('selectAll');
 
                 var idDisc = $(this).closest('[data-discId]').attr('data-discId');
 
